--- a/MPEG4/AndroidManifest.xml
+++ b/MPEG4/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:allowBackup="true" >
         <activity
                 android:name="hu.unideb.ik.mpeg4head.OpenGLES20Activity"
-                android:label="@string/app_name" >
+                android:label="@string/app_name" 
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
